# nabob-framework

./: README.md
move-stdlib/: Cargo.toml
move-stdlib/doc/: acl.md  bcs.md  bit_vector.md  cmp.md  error.md  features.md  fixed_point32.md  hash.md  mem.md  option.md  overview.md  signer.md  string.md  vector.md  vector_ext.md
move-stdlib/sources/: bcs.move
move-stdlib/sources/configs/: features.move  features.spec.move
move-stdlib/src/: lib.rs
move-stdlib/src/natives/: bcs.rs  cmp.rs  hash.rs  mem.rs  mod.rs  signer.rs  string.rs  unit_test.rs  vector.rs
nabob-framework/: Move.toml
nabob-framework/doc/: account.md  account_abstraction.md  aggregator.md  aggregator_factory.md  aggregator_v2.md  auth_data.md  bcs_stream.md  big_ordered_map.md  block.md  bob_primary_fungible_store.md  bos_primary_fungible_store.md  chain_id.md  chain_status.md  code.md  coin.md  config_buffer.md  consensus_config.md  create_signer.md  delegation_pool.md  dispatchable_fungible_asset.md  dkg.md  event.md  execution_config.md  function_info.md  fungible_asset.md  gas_schedule.md  genesis.md  governance_proposal.md  jwk_consensus_config.md  jwks.md  keyless_account.md  managed_coin.md  multisig_account.md  nabob_account.md  nabob_coin.md  nabob_governance.md  nabob_primary_fungible_store.md  object.md  object_code_deployment.md  optional_aggregator.md  (+32 more)
nabob-framework/doc_template/: overview.md
nabob-framework/sources/: account.move  account.spec.move  block.move  block.spec.move  chain_id.move  chain_id.spec.move  chain_status.move  chain_status.spec.move  code.move  code.spec.move  coin.move  coin.spec.move  create_signer.move  create_signer.spec.move  delegation_pool.move  delegation_pool.spec.move  dispatchable_fungible_asset.move  dispatchable_fungible_asset.spec.move  dkg.move  dkg.spec.move  event.move  event.spec.move  function_info.move  function_info.spec.move  fungible_asset.move  fungible_asset.spec.move  genesis.move  genesis.spec.move  governance_proposal.move  governance_proposal.spec.move  guid.move  guid.spec.move  jwks.move  jwks.spec.move  keyless_account.move  keyless_account.spec.move  managed_coin.move  managed_coin.spec.move  multisig_account.move  (+52 more)
nabob-stdlib/: Move.toml
nabob-token/: Move.toml
nabob-token-objects/: Move.toml
(+297 files in other folders)
