[package]
name = "nabob-move-stdlib"
version.workspace = true
edition = "2021"

[dependencies]
nabob-gas-schedule = { workspace = true }
nabob-native-interface = { workspace = true }
nabob-types = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
sha2 = "0.9.3"
sha3 = "0.9.1"
smallvec = "1.6.1"

[dev-dependencies]
dir-diff = "0.3.2"
file_diff = "1.0.0"
move-cli = { workspace = true }
move-package = { workspace = true }
move-unit-test = { workspace = true }
tempfile = "3.2.0"

[features]
testing = []