[package]
name = "nabob-move-stdlib"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-gas-schedule = { workspace = true }
nabob-native-interface = { workspace = true }
nabob-types = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
dir-diff = "0.3.2"
file_diff = "1.0.0"
move-cli = { workspace = true }
move-package = { workspace = true }
move-unit-test = { workspace = true }
tempfile = { workspace = true }

[features]
testing = []
